--- a/index.html
+++ b/index.html
@@ -8,15 +8,29 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <section>
+    <section id="landing">
         <nav>
-            <img src="./assets/Library.svg" alt="">
-            <ul>
-                <li><a href="#" class="nav__link">Home</a></li>
-                <li><a href="#" class="nav__link">Contact</a></li>
-                <li><a href="#" class="nav__link">Books</a></li>
-            </ul>
+            <div class="nav__container">
+                <img src="./assets/Library.svg" class="logo" alt="Logo">
+                <ul>
+                    <li><a href="#" class="nav__link">Home</a></li>
+                    <li><a href="#" class="nav__link">Contact</a></li>
+                    <li><a href="#" class="nav__link nav__link--primary">Books</a></li>
+                </ul>
+            </div>
         </nav>
+        <header>
+            <div class="header__container">
+                <div class="header__description">
+                    <h1>Malaysia's most awarded online library platform</h1>
+                    <h2>Find your dream book with <span class="purple">library</span></h2>
+                    <button class="btn">Browse books</button>
+                </div>
+                <figure>
+                    <img src="./assets/Undraw_Books.svg" alt="pano">
+                </figure>
+            </div>
+        </header>
     </section>
     
 </body>
