--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <button class="btn">Browse books</button>
                 </div>
                 <figure>
-                    <img src="./assets/Undraw_Books.svg" alt="pano">
+                    <img class="header__img--wrapper" src="./assets/Undraw_Books.svg" alt="pano">
                 </figure>
             </div>
         </header>
