--- a/index.html
+++ b/index.html
@@ -69,7 +69,27 @@
         <section id="features">
             <div class="container">
                 <div class="row">
-
+                    <h2 class="section__title">Features <span class="purple">Books</span></h2>
+                    <div class="books">
+                        <div class="book">
+                            <figure>
+                                <img class="book__img" src="./assets/crack the coding interview.png" alt="Crack the Coding Inteview">
+                            </figure>
+                            <div class="book__title">
+                                Booktitle
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <div class="book__price">
+                                <span class="book__price--normal">RM25</span>RM70
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
