--- a/index.html
+++ b/index.html
@@ -69,14 +69,68 @@
         <section id="features">
             <div class="container">
                 <div class="row">
-                    <h2 class="section__title">Features <span class="purple">Books</span></h2>
+                    <h2 class="section__title">Featured <span class="purple">Books</span></h2>
                     <div class="books">
                         <div class="book">
-                            <figure>
+                            <figure class="book__img--wrapper">
                                 <img class="book__img" src="./assets/crack the coding interview.png" alt="Crack the Coding Inteview">
                             </figure>
                             <div class="book__title">
-                                Booktitle
+                                Cracking the Coding Interview
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <div class="book__price">
+                                <span class="book__price--normal">RM25</span>RM70
+                            </div>
+                        </div>
+                        <div class="book">
+                            <figure class="book__img--wrapper">
+                                <img class="book__img" src="./assets/atomic habits.jpg" alt="Crack the Coding Inteview">
+                            </figure>
+                            <div class="book__title">
+                                Atomic Habits
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <div class="book__price">
+                                <span class="book__price--normal">RM25</span>RM70
+                            </div>
+                        </div>
+                        <div class="book">
+                            <figure class="book__img--wrapper">
+                                <img class="book__img" src="./assets/david goggins.jpeg" alt="Crack the Coding Inteview">
+                            </figure>
+                            <div class="book__title">
+                                Can't Hurt Me
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <div class="book__price">
+                                <span class="book__price--normal">RM25</span>RM70
+                            </div>
+                        </div>
+                        <div class="book">
+                            <figure class="book__img--wrapper">
+                                <img class="book__img" src="./assets/deep work.jpeg" alt="Crack the Coding Inteview">
+                            </figure>
+                            <div class="book__title">
+                                Deep Work
                             </div>
                             <div class="book__ratings">
                                 <i class="fas fa-star"></i>
@@ -93,13 +147,160 @@
                 </div>
             </div>
         </section>
-        <section id="recent">
+        <section id="latest">
             <div class="container">
                 <div class="row">
-
+                    <h2 class="section__title">Featured <span class="purple">Books</span></h2>
+                    <div class="books">
+                        <div class="book">
+                            <figure class="book__img--wrapper">
+                                <img class="book__img" src="./assets/crack the coding interview.png" alt="Crack the Coding Inteview">
+                            </figure>
+                            <div class="book__title">
+                                Cracking the Coding Interview
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <div class="book__price">
+                                <span class="book__price--normal">RM25</span>RM70
+                            </div>
+                        </div>
+                        <div class="book">
+                            <figure class="book__img--wrapper">
+                                <img class="book__img" src="./assets/atomic habits.jpg" alt="Crack the Coding Inteview">
+                            </figure>
+                            <div class="book__title">
+                                Atomic Habits
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <div class="book__price">
+                                <span class="book__price--normal">RM25</span>RM70
+                            </div>
+                        </div>
+                        <div class="book">
+                            <figure class="book__img--wrapper">
+                                <img class="book__img" src="./assets/david goggins.jpeg" alt="Crack the Coding Inteview">
+                            </figure>
+                            <div class="book__title">
+                                Can't Hurt Me
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <div class="book__price">
+                                <span class="book__price--normal">RM25</span>RM70
+                            </div>
+                        </div>
+                        <div class="book">
+                            <figure class="book__img--wrapper">
+                                <img class="book__img" src="./assets/deep work.jpeg" alt="Crack the Coding Inteview">
+                            </figure>
+                            <div class="book__title">
+                                Deep Work
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <div class="book__price">
+                                <span class="book__price--normal">RM25</span>RM70
+                            </div>
+                        </div>
+                        <div class="book">
+                            <figure class="book__img--wrapper">
+                                <img class="book__img" src="./assets/david goggins.jpeg" alt="Crack the Coding Inteview">
+                            </figure>
+                            <div class="book__title">
+                                Can't Hurt Me
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <div class="book__price">
+                                <span class="book__price--normal">RM25</span>RM70
+                            </div>
+                        </div>
+                        <div class="book">
+                            <figure class="book__img--wrapper">
+                                <img class="book__img" src="./assets/david goggins.jpeg" alt="Crack the Coding Inteview">
+                            </figure>
+                            <div class="book__title">
+                                Can't Hurt Me
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <div class="book__price">
+                                <span class="book__price--normal">RM25</span>RM70
+                            </div>
+                        </div>
+                        <div class="book">
+                            <figure class="book__img--wrapper">
+                                <img class="book__img" src="./assets/david goggins.jpeg" alt="Crack the Coding Inteview">
+                            </figure>
+                            <div class="book__title">
+                                Can't Hurt Me
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <div class="book__price">
+                                <span class="book__price--normal">RM25</span>RM70
+                            </div>
+                        </div>
+                        <div class="book">
+                            <figure class="book__img--wrapper">
+                                <img class="book__img" src="./assets/david goggins.jpeg" alt="Crack the Coding Inteview">
+                            </figure>
+                            <div class="book__title">
+                                Can't Hurt Me
+                            </div>
+                            <div class="book__ratings">
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star-half-alt"></i>
+                            </div>
+                            <div class="book__price">
+                                <span class="book__price--normal">RM25</span>RM70
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
+        
     </main>
     
 </body>
