--- a/index.html
+++ b/index.html
@@ -150,14 +150,14 @@
         <section id="latest">
             <div class="container">
                 <div class="row">
-                    <h2 class="section__title">Featured <span class="purple">Books</span></h2>
+                    <h2 class="section__title">Latest <span class="purple">Books</span></h2>
                     <div class="books">
                         <div class="book">
                             <figure class="book__img--wrapper">
-                                <img class="book__img" src="./assets/crack the coding interview.png" alt="Crack the Coding Inteview">
+                                <img class="book__img" src="./assets/book-1.jpeg" alt="Crack the Coding Inteview">
                             </figure>
                             <div class="book__title">
-                                Cracking the Coding Interview
+                                The 10X Rule
                             </div>
                             <div class="book__ratings">
                                 <i class="fas fa-star"></i>
@@ -172,10 +172,10 @@
                         </div>
                         <div class="book">
                             <figure class="book__img--wrapper">
-                                <img class="book__img" src="./assets/atomic habits.jpg" alt="Crack the Coding Inteview">
+                                <img class="book__img" src="./assets/book-2.jpeg" alt="Crack the Coding Inteview">
                             </figure>
                             <div class="book__title">
-                                Atomic Habits
+                                Be Obsessed Or Be Average
                             </div>
                             <div class="book__ratings">
                                 <i class="fas fa-star"></i>
@@ -190,10 +190,10 @@
                         </div>
                         <div class="book">
                             <figure class="book__img--wrapper">
-                                <img class="book__img" src="./assets/david goggins.jpeg" alt="Crack the Coding Inteview">
+                                <img class="book__img" src="./assets/book-3.jpeg" alt="Crack the Coding Inteview">
                             </figure>
                             <div class="book__title">
-                                Can't Hurt Me
+                                Rich Dad Poor Dad
                             </div>
                             <div class="book__ratings">
                                 <i class="fas fa-star"></i>
@@ -208,10 +208,10 @@
                         </div>
                         <div class="book">
                             <figure class="book__img--wrapper">
-                                <img class="book__img" src="./assets/deep work.jpeg" alt="Crack the Coding Inteview">
+                                <img class="book__img" src="./assets/book-4.jpeg" alt="Crack the Coding Inteview">
                             </figure>
                             <div class="book__title">
-                                Deep Work
+                                Cashflow Quadrant
                             </div>
                             <div class="book__ratings">
                                 <i class="fas fa-star"></i>
@@ -226,10 +226,10 @@
                         </div>
                         <div class="book">
                             <figure class="book__img--wrapper">
-                                <img class="book__img" src="./assets/david goggins.jpeg" alt="Crack the Coding Inteview">
+                                <img class="book__img" src="./assets/book-5.jpeg" alt="Crack the Coding Inteview">
                             </figure>
                             <div class="book__title">
-                                Can't Hurt Me
+                                48 Laws of Power
                             </div>
                             <div class="book__ratings">
                                 <i class="fas fa-star"></i>
@@ -244,10 +244,10 @@
                         </div>
                         <div class="book">
                             <figure class="book__img--wrapper">
-                                <img class="book__img" src="./assets/david goggins.jpeg" alt="Crack the Coding Inteview">
+                                <img class="book__img" src="./assets/book-6.jpeg" alt="Crack the Coding Inteview">
                             </figure>
                             <div class="book__title">
-                                Can't Hurt Me
+                                The 5 Second Rule
                             </div>
                             <div class="book__ratings">
                                 <i class="fas fa-star"></i>
@@ -262,10 +262,10 @@
                         </div>
                         <div class="book">
                             <figure class="book__img--wrapper">
-                                <img class="book__img" src="./assets/david goggins.jpeg" alt="Crack the Coding Inteview">
+                                <img class="book__img" src="./assets/book-7.jpg" alt="Crack the Coding Inteview">
                             </figure>
                             <div class="book__title">
-                                Can't Hurt Me
+                                Your Next Five Moves
                             </div>
                             <div class="book__ratings">
                                 <i class="fas fa-star"></i>
@@ -280,10 +280,10 @@
                         </div>
                         <div class="book">
                             <figure class="book__img--wrapper">
-                                <img class="book__img" src="./assets/david goggins.jpeg" alt="Crack the Coding Inteview">
+                                <img class="book__img" src="./assets/book-8.jpeg" alt="Crack the Coding Inteview">
                             </figure>
                             <div class="book__title">
-                                Can't Hurt Me
+                                Mastery
                             </div>
                             <div class="book__ratings">
                                 <i class="fas fa-star"></i>
