--- a/index.html
+++ b/index.html
@@ -300,8 +300,35 @@
                 </div>
             </div>
         </section>
+
+        <section id="explore">
+            <div class="container">
+                <div class="row row__column">
+                    <h2>Explore more <span class="purple">Books</span></h2>
+                    <button class="btn">Browse books</button>
+                </div>
+            </div>
+        </section>
         
     </main>
     
+    <footer>
+        <div class="container">
+            <div class="row">
+                <a href="#">
+                    <figure class="footer__logo">
+                        <img src="./assets/Library.svg" class="footer__logo--img" alt="Logo">
+                    </figure>
+                </a>
+                <div class="footer__list">
+                    <a href="" class="footer__link">Home</a>
+                    <a href="" class="footer__link">About</a>
+                    <a href="" class="footer__link">Books</a>
+                    <a href="" class="footer__link">Contacts</a>
+                </div>
+
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
