--- a/index.html
+++ b/index.html
@@ -305,6 +305,7 @@
             <div class="container">
                 <div class="row row__column">
                     <h2>Explore more <span class="purple">Books</span></h2>
+                    <a href="#features"></a>
                     <button class="btn">Browse books</button>
                 </div>
             </div>
@@ -314,7 +315,7 @@
     
     <footer>
         <div class="container">
-            <div class="row">
+            <div class="row row__column">
                 <a href="#">
                     <figure class="footer__logo">
                         <img src="./assets/Library.svg" class="footer__logo--img" alt="Logo">
@@ -322,11 +323,13 @@
                 </a>
                 <div class="footer__list">
                     <a href="" class="footer__link">Home</a>
-                    <a href="" class="footer__link">About</a>
+                    <a href="" class="footer__link no-cursor">About</a>
                     <a href="" class="footer__link">Books</a>
-                    <a href="" class="footer__link">Contacts</a>
+                    <a href="" class="footer__link no-cursor">Contacts</a>
                 </div>
-
+                <div class="footer__copy">
+                    Copyright &copy; 2022 Library
+                </div>
             </div>
         </div>
     </footer>
