--- a/index.html
+++ b/index.html
@@ -14,30 +14,30 @@
         <nav>
             <div class="nav__container">
                 <img src="./assets/Library.svg" class="logo" alt="Logo">
-                <ul>
+                <ul class="nav__links">
                     <li><a href="#" class="nav__link">Home</a></li>
                     <li><a href="#" class="nav__link">Contact</a></li>
                     <li><a href="#" class="nav__link nav__link--primary">Books</a></li>
                 </ul>
-            </div>
-            <button class="btn__menu" onclick="openMenu()">
-                <i class="fas fa-bars"></i>
-            </button>
-            <div class="menu__backdrop">
+                <button class="btn__menu" onclick="openMenu()">
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div class="menu__backdrop">
                 <button class="btn__menu btn__menu--close" onclick="closeMenu()">
                     <i class="fas fa-times"></i>
                 </button>
                 <ul class="menu__links">
                     <li class="menu__list">
-                        <a class="menu__link" href="">Home</a>
+                        <a class="menu__link" onclick="closeMenu()">Home</a>
                     </li>
                     <li class="menu__list">
-                        <a class="menu__link" href="#features">Books</a>
+                        <a class="menu__link" href="#features" onclick="closeMenu()">Books</a>
                     </li>
                     <li class="menu__list">
-                        <a class="menu__link no-cursor" href="">Contact</a>
+                        <a class="menu__link no-cursor" href=""onclick="closeMenu()">Contact</a>
                     </li>
                 </ul>
+                </div>
             </div>
         </nav>
         <header>
@@ -45,7 +45,9 @@
                 <div class="header__description">
                     <h1>Malaysia's most awarded online library platform</h1>
                     <h2>Find your dream book with <span class="purple">library</span></h2>
-                    <button class="btn">Browse books</button>
+                    <a href="#features">
+                        <button class="btn">Browse books</button>
+                    </a>
                 </div>
                 <figure>
                     <img class="header__img--wrapper" src="./assets/Undraw_Books.svg" alt="pano">
